<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/logook"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/custominput"
                android:drawableStart="@drawable/custom_person_icon"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/name"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <EditText
                android:id="@+id/et_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/custominput"
                android:drawableStart="@drawable/custom_person_icon"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/surname"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/custominput"
                android:drawableStart="@drawable/custom_email_icon"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/email"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <EditText
                android:id="@+id/et_passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/custominput"
                android:drawableStart="@drawable/custom_lock_icon"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/password"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <EditText
                android:id="@+id/et_user_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/custominput"
                android:drawableStart="@drawable/custom_person_icon"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/user_level"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/btn_registre"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>



    </ScrollView>


</LinearLayout>